--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
       <h1>
         <%= @user.name %>
       </h1>
+      <h3> I GOT <%= @user.feelings.count %> FEELZ</h3>
     </section>
   </aside>
   </div>
