--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,2 +1,3 @@
 <h1><%= current_user.name %></h1>
+<h3> I GOT <%= current_user.feelings.count %> FEELZ</h3>
 <span><%= link_to "view my profile", current_user %></span>
