--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,6 +4,9 @@
       <section class="user_info">
         <%= render 'shared/user_info' %>
       </section>
+      <section class="feelings_form">
+        <%= render 'shared/feelings_form' %>
+      </section>
     </aside>
     </div>
 <% else %>
